--- a/app/src/main/res/layout/singleplayer_game.xml
+++ b/app/src/main/res/layout/singleplayer_game.xml
@@ -6,7 +6,7 @@
     android:id="@+id/game"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyFragment">
+    tools:context=".View.MyFragment">
 
     <Button
         android:id="@+id/button"
