--- a/app/src/main/res/layout/singleplayer_game.xml
+++ b/app/src/main/res/layout/singleplayer_game.xml
@@ -41,11 +41,11 @@
     <Button
         android:id="@+id/firstOption"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@+id/firstOptionTV"
         android:layout_marginTop="20dp"
-        android:text="Button"
         android:backgroundTint="@color/buttons"
         android:gravity="start|center_vertical"
+        android:text=""
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/question" />
@@ -53,8 +53,9 @@
     <Button
         android:id="@+id/secondOption"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_height="@+id/secondOptionTV"
+        android:layout_marginTop="8dp"
+        android:text=""
         android:backgroundTint="@color/buttons"
         android:gravity="start|center_vertical"
         android:textSize="12sp"
@@ -64,8 +65,9 @@
     <Button
         android:id="@+id/thirdOption"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_height="@+id/thirdOptionTV"
+        android:layout_marginTop="8dp"
+        android:text=""
         android:backgroundTint="@color/buttons"
         android:gravity="start|center_vertical"
         android:textSize="12sp"
@@ -75,8 +77,9 @@
     <Button
         android:id="@+id/fourthOption"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_height="@+id/fourthOptionTV"
+        android:layout_marginTop="8dp"
+        android:text=""
         android:backgroundTint="@color/buttons"
         android:gravity="start|center_vertical"
         android:textSize="12sp"
@@ -97,12 +100,13 @@
     <TextView
         android:id="@+id/question"
         android:layout_width="0dp"
-        android:layout_height="90dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="15dp"
         android:text="TextView"
-        android:textSize="17sp"
+        android:minHeight="60dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
@@ -113,7 +117,7 @@
         android:layout_height="50dp"
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="35dp"
-        android:text="Button"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -127,5 +131,66 @@
         app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/type_of_question" />
+
+    <TextView
+        android:id="@+id/firstOptionTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="TextView"
+        android:minHeight="25dp"
+        android:textColor="@color/normal"
+        android:translationZ="90dp"
+        app:layout_constraintBottom_toBottomOf="@+id/firstOption"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/firstOption" />
+    <TextView
+        android:minHeight="25dp"
+        android:id="@+id/secondOptionTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="TextView"
+        android:textColor="@color/normal"
+        android:translationZ="90dp"
+        app:layout_constraintBottom_toBottomOf="@+id/secondOption"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/secondOption" />
+    <TextView
+        android:minHeight="25dp"
+        android:id="@+id/thirdOptionTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="TextView"
+        android:textColor="@color/normal"
+        android:translationZ="90dp"
+        app:layout_constraintBottom_toBottomOf="@+id/thirdOption"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/thirdOption" />
+    <TextView
+        android:minHeight="25dp"
+        android:id="@+id/fourthOptionTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="TextView"
+        android:textColor="@color/normal"
+        android:translationZ="90dp"
+        app:layout_constraintBottom_toBottomOf="@+id/fourthOption"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/fourthOption" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
