--- a/app/src/main/res/layout/singleplayer_game.xml
+++ b/app/src/main/res/layout/singleplayer_game.xml
@@ -13,6 +13,7 @@
         android:layout_width="150dp"
         android:layout_height="200dp"
         android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
         android:text="Placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,10 +21,11 @@
 
     <TextView
         android:id="@+id/number_of_question"
-        android:layout_width="125dp"
-        android:layout_height="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="30dp"
+        android:gravity="center"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -125,6 +127,7 @@
         android:id="@+id/playerNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
         android:gravity="center"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/question"
